added almost all remaining dependencies, need to replace 1.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "express": "^5.2.1",
+    "express-session": "^1.18.2",
     "pinia": "^3.0.4",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
