--- a/package.json
+++ b/package.json
@@ -24,5 +24,12 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "express": "^5.2.1",
+    "express-session": "^1.18.2",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.15"
   }
 }
