--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
   "type": "module",
   "main": "index.ts",
   "scripts": {
+    "dev": "npx ts-node --esm ./index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "express": "^5.2.1",
     "express-session": "^1.18.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "vitest": "^4.0.15"
   }
