--- a/deno.json
+++ b/deno.json
@@ -3,6 +3,9 @@
     "dev": "deno run --watch main.ts"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "@std/assert": "jsr:@std/assert@1",
+    "bcryptjs": "npm:bcryptjs@^3.0.3",
+    "express": "npm:express@^5.2.1",
+    "express-session": "npm:express-session@^1.18.2"
   }
 }
