--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,9 @@
 {
   "tasks": {
-    "dev": "deno run  --allow-env --allow-net --watch main.ts"
+    "clean": "rm db/todo.db",
+    "one": "deno run  --allow-env --allow-net --allow-read --allow-write main.ts",
+    "cleanOne": "deno run clean && deno run one",
+    "dev": "deno run  --allow-env --allow-net --allow-read --allow-write --watch main.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
