--- a/deno.json
+++ b/deno.json
@@ -6,7 +6,7 @@
     "dev": "deno run  --allow-env --allow-net --allow-read --allow-write --watch main.ts"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1",
+    "@std/assert": "jsr:@std/assert@^1.0.16",
     "bcryptjs": "npm:bcryptjs@^3.0.3",
     "express": "npm:express@^5.2.1",
     "express-session": "npm:express-session@^1.18.2"
