--- a/back/package.json
+++ b/back/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "better-sqlite3": "^12.5.0",
     "express": "^5.2.1",
     "express-session": "^1.18.2"
   }
