--- a/back/package.json
+++ b/back/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./tests/"
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
